# KairoGPU

./: CMakeLists.txt  README.md
src/: KairoGPU.cppm  KairoMetal.mm
tests/: smoke.cpp
